# agentcore-cli

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  PRD.md  README.md  index.html  llms.txt  mkdocs.yml  objects.inv  project-briefing.md  pyproject.toml  sitemap.xml
.cursor/rules/: terminaluse.mdc
.github/workflows/: deploy-docs.yml
agentcore_cli/: cli.py
agentcore_cli/commands/: __init__.py  config.py  container.py  environment.py  resources.py  setup.py  unified_agent.py
agentcore_cli/models/: __init__.py  __main__.py  adapters.py  base.py  config.py  inputs.py  resources.py  responses.py  runtime.py
agentcore_cli/services/: agentcore.py  cognito.py  config.py  config_sync.py  containers.py  ecr.py  iam.py
agentcore_cli/services/templates/: cognito.cloudformation.yaml  ecr.cloudformation.yaml  iam.cloudformation.yaml
agentcore_cli/static/: banner.py  banner.txt
agentcore_cli/utils/: __init__.py  aws_utils.py  cfn_utils.py  command_executor.py  observability.py  rich_utils.py  session_utils.py  validation.py
architecture/agentcore-runtime/: index.html
architecture/environment-first/: index.html
architecture/overview/: index.html
architecture/security/: index.html
assets/javascripts/: bundle.56ea9cef.min.js
cli-reference/agent/: index.html
cli-reference/commands/: index.html
cli-reference/config/: index.html
cli-reference/container/: index.html
cli-reference/env/: index.html
cli-reference/init/: index.html
cli-reference/resources/: index.html
docs/mkdocs/: index.md
docs/mkdocs/architecture/: agentcore-runtime.md  environment-first.md  overview.md  security.md
docs/mkdocs/cli-reference/: agent.md  commands.md  config.md  container.md  env.md  init.md  resources.md
docs/mkdocs/examples/: langchain-agent.md
docs/mkdocs/getting-started/: first-agent.md  installation.md  quick-start.md
docs/mkdocs/troubleshooting/: common-issues.md
docs/mkdocs/tutorials/: agent-customization.md
docs/mkdocs/user-guide/: agents.md  containers.md  environments.md
docs/overrides/: main.html
examples/langchain-agent/: index.html
getting-started/first-agent/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
reference/agentcore_cli/: index.html
reference/agentcore_cli/cli/: index.html
reference/agentcore_cli/commands/: index.html
reference/agentcore_cli/commands/config/: index.html
reference/agentcore_cli/commands/container/: index.html
reference/agentcore_cli/commands/environment/: index.html
reference/agentcore_cli/commands/resources/: index.html
reference/agentcore_cli/commands/setup/: index.html
reference/agentcore_cli/commands/unified_agent/: index.html
reference/agentcore_cli/models/: index.html
reference/agentcore_cli/models/adapters/: index.html
reference/agentcore_cli/models/base/: index.html
reference/agentcore_cli/models/config/: index.html
reference/agentcore_cli/models/inputs/: index.html
reference/agentcore_cli/models/resources/: index.html
reference/agentcore_cli/models/responses/: index.html
reference/agentcore_cli/models/runtime/: index.html
reference/agentcore_cli/services/: index.html
reference/agentcore_cli/services/agentcore/: index.html
reference/agentcore_cli/services/cognito/: index.html
reference/agentcore_cli/services/config/: index.html
reference/agentcore_cli/services/config_sync/: index.html
reference/agentcore_cli/services/containers/: index.html
reference/agentcore_cli/services/ecr/: index.html
reference/agentcore_cli/services/iam/: index.html
reference/agentcore_cli/static/: index.html
reference/agentcore_cli/static/banner/: index.html
reference/agentcore_cli/utils/: index.html
reference/agentcore_cli/utils/aws_utils/: index.html
reference/agentcore_cli/utils/cfn_utils/: index.html
reference/agentcore_cli/utils/command_executor/: index.html
reference/agentcore_cli/utils/observability/: index.html
reference/agentcore_cli/utils/rich_utils/: index.html
reference/agentcore_cli/utils/session_utils/: index.html
reference/agentcore_cli/utils/validation/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_agentcore_service.py  test_cli.py  test_cognito_service.py  test_ecr_service.py
troubleshooting/common-issues/: index.html
tutorials/agent-customization/: index.html
user-guide/agents/: index.html
user-guide/containers/: index.html
user-guide/environments/: index.html
